--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,14 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="ImageButtonBg" parent="android:Widget.ImageButton">
+        <item name="android:hint">Upload Bukti</item>
+        <item name="android:textColorHint">@color/colorWhite</item>
+        <item name="android:radius">20dp</item>
+        <item name="android:background">@color/gray</item>
+    </style>
+
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/spinner_background</item>
+    </style>
 </resources>
