--- a/app/src/main/res/layout-v16/fragment_dashboard.xml
+++ b/app/src/main/res/layout-v16/fragment_dashboard.xml
@@ -15,7 +15,7 @@
         <TextView
             android:textStyle="bold"
             android:textSize="16sp"
-            app:fontFamily="@font/roboto"
+            android:fontFamily="@font/roboto"
             android:text="@string/overview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
@@ -34,7 +34,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="12sp"
-                    app:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/jumlah_pelanggar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -42,7 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    app:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     tools:text="52" />
@@ -63,7 +63,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:textSize="12sp"
-                    app:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto"
                     android:text="@string/jumlah_siswa"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
@@ -71,7 +71,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
-                    app:fontFamily="@font/roboto"
+                    android:fontFamily="@font/roboto"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     tools:text="52" />
@@ -81,7 +81,7 @@
             android:layout_marginTop="24dp"
             android:textStyle="bold"
             android:textSize="16sp"
-            app:fontFamily="@font/roboto"
+            android:fontFamily="@font/roboto"
             android:text="@string/pelanggaran_paling_sering"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
