--- a/app/src/main/res/layout/fragment_tja.xml
+++ b/app/src/main/res/layout/fragment_tja.xml
@@ -22,7 +22,7 @@
 
             <Spinner
                 android:id="@+id/spinner_tja"
-                style="@style/SpinnerTheme"
+                android:background="@drawable/spinner_background"
                 android:layout_margin="10dp"
                 android:layout_gravity="center"
                 android:layout_width="match_parent"
