--- a/app/src/main/res/layout/activity_detail_point.xml
+++ b/app/src/main/res/layout/activity_detail_point.xml
@@ -8,58 +8,45 @@
     android:layout_height="match_parent"
     tools:context=".ui.detailpoint.DetailPoint">
     <LinearLayout
+        android:paddingTop="11dp"
         android:background="@color/colorBgSplash"
         android:layout_width="match_parent"
         android:orientation="horizontal"
         android:paddingBottom="11dp"
         android:layout_height="wrap_content">
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_weight="1.2"
-            android:gravity="center_horizontal"
-            android:text="@string/code"
-            android:textAlignment="center"
             android:textColor="@color/colorWhite"
-            android:textSize="14sp"
-            app:fontFamily="@font/roboto"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.8"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:text="@string/code"
+            android:layout_marginLeft="35dp"
             android:textAlignment="center"
             android:textSize="14sp"
             app:fontFamily="@font/roboto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginStart="35dp" />
+        <TextView
             android:textColor="@color/colorWhite"
             android:text="@string/deskripsi"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center_horizontal" />
-        <TextView android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_weight="1"
-            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="84dp"
             android:textAlignment="center"
             android:textSize="14sp"
             app:fontFamily="@font/roboto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginStart="84dp" />
+        <TextView
             android:textColor="@color/colorWhite"
             android:text="@string/point"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:gravity="center_horizontal" />
+            android:layout_marginLeft="80dp"
+            android:textAlignment="center"
+            android:textSize="14sp"
+            app:fontFamily="@font/roboto"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:layout_marginStart="80dp" />
     </LinearLayout>
     <androidx.recyclerview.widget.RecyclerView
         tools:listitem="@layout/point_items"
