--- a/app/src/main/res/layout/point_items.xml
+++ b/app/src/main/res/layout/point_items.xml
@@ -1,65 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
+    android:paddingTop="23dp"
+    android:paddingBottom="23dp"
     android:id="@+id/container_point_item"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="60dp"
     android:orientation="horizontal">
     <TextView
-        app:fontFamily="@font/roboto"
-
         android:id="@+id/code_point"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:layout_weight="1.1"
+        tools:text="@string/code"
+        android:layout_marginLeft="35dp"
         android:textAlignment="center"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/code"
-        android:gravity="center_horizontal" />
-
-    <TextView
         app:fontFamily="@font/roboto"
-        android:id="@+id/description_point"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="1dp"
-        android:layout_weight="0.8"
+        android:gravity="center_horizontal"
+        android:layout_marginStart="35dp" />
+    <TextView
+        android:id="@+id/description_point"
+
         tools:text="@string/deskripsi"
+        android:layout_marginLeft="41dp"
         android:textAlignment="textStart"
         android:textSize="12sp"
-        android:lineSpacingExtra="2sp"
-        android:translationY="-0.97sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="start" />
-
-    <TextView
         app:fontFamily="@font/roboto"
-
-        android:id="@+id/point"
-        android:layout_width="match_parent"
+        android:layout_width="168dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_weight="1"
+        android:layout_marginStart="41dp"
+        android:gravity="start" />
+    <TextView
+        android:id="@+id/point"
         tools:text="@string/point"
+        android:layout_marginLeft="32dp"
         android:textAlignment="center"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center_horizontal" />
+        app:fontFamily="@font/roboto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:layout_marginStart="32dp" />
 </LinearLayout>
