--- a/app/src/main/res/layout/item_siswa.xml
+++ b/app/src/main/res/layout/item_siswa.xml
@@ -19,16 +19,16 @@
             android:background="@drawable/border"
             android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/imageView"
+            <View
+                android:id="@+id/view4"
                 android:layout_width="70dp"
-                android:layout_height="0dp"
+                android:layout_height="70dp"
+                android:background="#009688"
+                android:layout_marginStart="24dp"
                 android:layout_marginLeft="24dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintDimensionRatio="H,1:1"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/pointsiswa" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <LinearLayout
                 android:id="@+id/linearLayout"
@@ -38,7 +38,7 @@
                 android:layout_marginLeft="24dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
+                app:layout_constraintStart_toEndOf="@+id/view4"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
@@ -70,6 +70,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_next"
                 tools:ignore="VectorDrawableCompat" />
+
+            <TextView
+                android:id="@+id/point"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="@+id/view4"
+                app:layout_constraintEnd_toEndOf="@+id/view4"
+                app:layout_constraintStart_toStartOf="@+id/view4"
+                app:layout_constraintTop_toTopOf="@+id/view4" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
