--- a/app/src/main/res/layout/activity_peraturan.xml
+++ b/app/src/main/res/layout/activity_peraturan.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorbgPeraturan"
-    tools:context=".ui.PeraturanActivity">
+    tools:context=".ui.peraturan.PeraturanActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_peraturan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
