--- a/app/src/main/res/layout/item_peraturan.xml
+++ b/app/src/main/res/layout/item_peraturan.xml
@@ -19,23 +19,27 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:orientation="vertical">
+
                 <TextView
+                    android:id="@+id/bab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="BAB 1"
-                    android:textSize="14sp"
-                    android:fontFamily="@font/robotoregular"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginLeft="16dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Ketentuan Umum"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/roboto"
                     android:layout_marginStart="16dp"
                     android:layout_marginLeft="16dp"
-                    android:textStyle="bold"/>
+                    android:fontFamily="@font/robotoregular"
+                    android:text="BAB 1"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/desc_bab"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="Ketentuan Umum"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
             </LinearLayout>
             <ImageView
                 android:layout_width="wrap_content"
