--- a/app/src/main/res/layout/fragment_detail_siswa.xml
+++ b/app/src/main/res/layout/fragment_detail_siswa.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.detailsiswa.DetailSiswaFragment">
+    tools:context=".ui.detailsiswa.DetailSiswaActivity">
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -29,7 +29,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/nama_lengka"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/nama_lengkap_detail"
@@ -37,6 +36,7 @@
                 app:fontFamily="@font/roboto" />
 
             <TextView
+                android:id="@+id/nama_lengkap"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginTop="6dp"
@@ -61,7 +61,6 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/nama_lengkap"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/kelas"
@@ -69,6 +68,7 @@
             app:fontFamily="@font/roboto"/>
 
         <TextView
+            android:id="@+id/kelas"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
@@ -101,6 +101,7 @@
             app:fontFamily="@font/roboto"/>
 
         <TextView
+            android:id="@+id/jumlah_point"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="6dp"
@@ -125,7 +126,7 @@
         android:orientation="vertical">
 
     <TextView
-        android:id="@+id/jumlah_pelanggara_detail"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -134,6 +135,7 @@
         app:fontFamily="@font/roboto"/>
 
     <TextView
+        android:id="@+id/jumlah_pelanggara_detail"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="6dp"
@@ -154,11 +156,11 @@
     </TextView>
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:id="@+id/rv_history"
+                android:id="@+id/rv_detail_siswa"
                 tools:listitem="@layout/detail_siswa_item"
                 android:layout_height="match_parent">
 
             </androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
