--- a/app/src/main/res/layout/item_siswa.xml
+++ b/app/src/main/res/layout/item_siswa.xml
@@ -76,6 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="1"
+                android:textColor="#FFF"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@+id/view4"
                 app:layout_constraintEnd_toEndOf="@+id/view4"
